2020-09-15 Shahzad Muzaffar  <@smuzaffar>
	V06-00-08: Implementation of projectInfo for SCRAMV3
	V06-01-00: Do nit delete perl/python scripts. Use the correct version
	based on scram version
	V06-01-01: Generate PCM for header only packages too
	V06-01-02: Always set default library name
2020-09-05 Shahzad Muzaffar  <@smuzaffar>
	V06-00-06: Fix target rebuild issues
	V06-00-07: Fix prebuodl rule ordering
2020-08-27 Shahzad Muzaffar  <@smuzaffar>
	V06-00-05: Added biglib in to CLING_PREBUILT_MODULE_PATH.
2020-08-24 Shahzad Muzaffar  <@smuzaffar>
	V06-00-04: only allow package/src to auto generate lcgdict.
2020-08-05 Shahzad Muzaffar  <@smuzaffar>
	V06-00-03: Typo
2020-08-04 Shahzad Muzaffar  <@smuzaffar>
	V06-00-02: Use CLING_MODULEMAP_FILES instead of CLING_MODULEMAP_PATH
2020-08-03 Shahzad Muzaffar  <@smuzaffar>
	V06-00-00: Update config to work with both SCRAM V2 and V3
	V06-00-01: Sync changes from master
2020-07-30 Shahzad Muzaffar  <@smuzaffar>
	V05-10-29: Drop createSymlink.pl in favor of createSymlink.sh
2020-07-27 Shahzad Muzaffar  <@smuzaffar>
	V05-10-27: Added findDependency perl version back for SCRAM V2 based
	releases.
	V05-10-28: Set execution permission for findDependency
2020-07-09 Shahzad Muzaffar  <@smuzaffar>
	V05-10-23,V05-10-24: Added back projectAreaRename.pl
	V05-10-25: Use projectAreaRename (i.e. without ext)
	V05-10-26: Fix library rules to keep on building it failed.
2020-07-07 Shahzad Muzaffar  <@smuzaffar>
	V05-10-22: Fix build log rules to avoid rebuild of products
2020-07-05 Roman Tulinov <@tulamor>
	V05-10-20, V05-10-21: Rewrite projectAreaRename using python.
2020-07-03 Shahzad Muzaffar  <@smuzaffar>
	V05-10-16: updateConfig migrated to python.
2020-07-02 Shahzad Muzaffar  <@smuzaffar>
	V05-10-14-01: Use -I instead of -isystem for cuda host flags
2020-07-01 Shahzad Muzaffar  <@smuzaffar>
	V05-10-14: Fix extra line for clang-tidy check
	performance-inefficient-vector-operation.
	V05-10-15: updateConfig migrated to python.