@@ -1,3 +1,5 @@
+2020-09-17 Shahzad Muzaffar  <@smuzaffar>
+	V06-01-03: Export dependencies for header only packages too.
 2020-09-15 Shahzad Muzaffar  <@smuzaffar>
 	V06-00-08: Implementation of projectInfo for SCRAMV3
 	V06-01-00: Do nit delete perl/python scripts. Use the correct version
